--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,8 +21,11 @@
   <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
   <!-- DataTables -->
   <!-- Responsive datatable examples -->
-  <link href=" https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet" type="text/css" />
+  <!--<link href=" https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.css" rel="stylesheet" type="text/css" />-->
   <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+  <!--Fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 
 
 
@@ -47,16 +50,10 @@
   <script src="assets/js/jquery.nicescroll.js"></script>
   <script src="assets/js/jquery.scrollTo.min.js"></script>
 
+  <!-- App js -->
+  <script src="assets/js/app.js"></script>
   <!-- Required datatable js -->
   <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
   <script src=" https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-
-
-
-
-
-
-  <!-- App js -->
-  <script src="assets/js/app.js"></script>
 </body>
 </html>
