--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-  <title>Hr Module</title>
+  <title>HR Solutions</title>
   <meta content="Admin Dashboard" name="description" />
-  <meta content="Themesdesign" name="author" />
+  <meta content="Techcloud" name="author" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
 
 
   <base href="/">
@@ -49,6 +51,8 @@
   <script src="assets/js/jquery.slimscroll.js"></script>
   <script src="assets/js/jquery.nicescroll.js"></script>
   <script src="assets/js/jquery.scrollTo.min.js"></script>
+
+
 
   <!-- App js -->
   <script src="assets/js/app.js"></script>
