--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -26,16 +26,14 @@
   <link href="assets/css/datepicker.css" rel="stylesheet" type="text/css" />
 
   <!-- DataTables -->
-  <link href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+  <link href="assets/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
 
   <!--Fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+  <!--<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">-->
+  <!--<link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">-->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
+  <link rel="stylesheet" href="assets/css/jquery-confirm.min.css">
 
-  <!--  -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -55,7 +53,7 @@
   <script src="assets/js/jquery.nicescroll.js"></script>
   <script src="assets/js/jquery.scrollTo.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.js"></script>
+  <script src="assets/js/jquery-confirm.min.js"></script>
 
 
 
@@ -66,8 +64,8 @@
   <!-- App js -->
   <script src="assets/js/app.js"></script>
   <!-- Required datatable js -->
-  <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-  <script src=" https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+  <script src="assets/js/jquery.dataTables.min.js"></script>
+  <script src="assets/js/dataTables.bootstrap4.min.js"></script>
 
 </body>
 </html>
